Merge latest changes from rework (#498)
* Function passes & Thread creation after unrolling #492
* Thread cf & must edges #494
* Dynamic Pthread join #496

---------

Signed-off-by: Hernan Ponce de Leon <hernanl.leon@huawei.com>
Co-authored-by: Thomas Haas <tomy.haas@t-online.de>
Co-authored-by: René Pascal Maseli <r.maseli@tu-bs.de>