@@ -38,7 +38,6 @@ import static com.dat3m.dartagnan.program.event.Tag.ASSERTION;
 import static com.dat3m.dartagnan.utils.Result.FAIL;
 import static com.dat3m.dartagnan.utils.Result.PASS;
 import static java.lang.Boolean.FALSE;
-import static java.util.stream.Collectors.toList;
 
 public abstract class ModelChecker {
 
@@ -124,7 +123,8 @@ public abstract class ModelChecker {
     private static void computeSpecificationFromProgramAssertions(Program program) {
         // We generate a program-spec from the user-placed assertions inside the C/Boogie-code.
         // For litmus tests, this function should not be called.
-        List<Event> assertions = program.getEvents().stream().filter(e -> e.hasTag(ASSERTION)).collect(toList());
+        List<Event> assertions = program.getThreads().stream()
+                .flatMap(t -> t.getEvents().stream().filter(e -> e.hasTag(ASSERTION))).toList();
         AbstractAssert spec = new AssertTrue();
         if(!assertions.isEmpty()) {
             spec = new AssertInline((Local)assertions.get(0));
